# api/swagger.yml
@@ -2,6 +2,67 @@ basePath: /api/v1
 consumes:
     - application/json
 definitions:
+    BaseComment:
+        properties:
+            content:
+                description: Comment content
+                type: string
+                x-go-name: Content
+            created_at:
+                description: The time the comment was created
+                format: date-time
+                type: string
+                x-go-name: CreatedAt
+            id:
+                description: The id for this comment
+                format: uuid
+                type: string
+                x-go-name: Id
+            updated_at:
+                description: The time the comment was updated
+                format: date-time
+                type: string
+                x-go-name: UpdatedAt
+        required:
+            - id
+            - content
+            - created_at
+            - updated_at
+        type: object
+        x-go-package: github.com/MangriMen/Diverse-Back/internal/models
+    BasePost:
+        description: BasePost represents the post without userId
+        properties:
+            content:
+                description: The url to the post content
+                type: string
+                x-go-name: Content
+            created_at:
+                description: The time the post was created
+                format: date-time
+                type: string
+                x-go-name: CreatedAt
+            description:
+                description: Post description
+                type: string
+                x-go-name: Description
+            id:
+                description: The id for this post
+                format: uuid
+                type: string
+                x-go-name: Id
+            likes:
+                description: Number of likes
+                format: int64
+                type: integer
+                x-go-name: Likes
+        required:
+            - id
+            - content
+            - description
+            - created_at
+        type: object
+        x-go-package: github.com/MangriMen/Diverse-Back/internal/models
     BaseUser:
         description: User represents the user without password for this application
         properties:
@@ -44,6 +105,36 @@ definitions:
             - updated_at
         type: object
         x-go-package: github.com/MangriMen/Diverse-Back/internal/models
+    Comment:
+        properties:
+            content:
+                description: Comment content
+                type: string
+                x-go-name: Content
+            created_at:
+                description: The time the comment was created
+                format: date-time
+                type: string
+                x-go-name: CreatedAt
+            id:
+                description: The id for this comment
+                format: uuid
+                type: string
+                x-go-name: Id
+            updated_at:
+                description: The time the comment was updated
+                format: date-time
+                type: string
+                x-go-name: UpdatedAt
+            user:
+                $ref: '#/definitions/BaseUser'
+        required:
+            - id
+            - content
+            - created_at
+            - updated_at
+        type: object
+        x-go-package: github.com/MangriMen/Diverse-Back/internal/models
     DefaultResponseBody:
         description: 'swagger: model'
         properties:
@@ -56,6 +147,46 @@ definitions:
         required:
             - error
             - message
+        type: object
+        x-go-package: github.com/MangriMen/Diverse-Back/internal/models/swagger_models
+    Post:
+        description: Post represents the post for this application
+        properties:
+            comments:
+                items:
+                    $ref: '#/definitions/Comment'
+                type: array
+                x-go-name: Comments
+            content:
+                description: The url to the post content
+                type: string
+                x-go-name: Content
+            created_at:
+                description: The time the post was created
+                format: date-time
+                type: string
+                x-go-name: CreatedAt
+            description:
+                description: Post description
+                type: string
+                x-go-name: Description
+            id:
+                description: The id for this post
+                format: uuid
+                type: string
+                x-go-name: Id
+            likes:
+                description: Number of likes
+                format: int64
+                type: integer
+                x-go-name: Likes
+            user:
+                $ref: '#/definitions/BaseUser'
+        required:
+            - id
+            - content
+            - description
+            - created_at
         type: object
         x-go-package: github.com/MangriMen/Diverse-Back/internal/models
     User:
@@ -152,6 +283,114 @@ paths:
             responses:
                 "200":
                     $ref: '#/responses/RegisterLoginUserResponse'
+                default:
+                    $ref: '#/responses/ErrorResponse'
+            schemes:
+                - http
+                - https
+    /post/{id}/comments:
+        post:
+            description: Add comment to the given post
+            operationId: addComment
+            produces:
+                - application/json
+            responses:
+                "201":
+                    $ref: '#/responses/CreateUpdateCommentResponse'
+                default:
+                    $ref: '#/responses/ErrorResponse'
+            schemes:
+                - http
+                - https
+    /post/{id}/comments/{comment}:
+        delete:
+            description: Delete comment by comment id with given post id
+            operationId: deleteComment
+            produces:
+                - application/json
+            responses:
+                "204":
+                    $ref: '#/responses/DeleteCommentResponse'
+                default:
+                    $ref: '#/responses/ErrorResponse'
+            schemes:
+                - http
+                - https
+        patch:
+            description: Update comment content by comment id with given post id
+            operationId: updateComment
+            produces:
+                - application/json
+            responses:
+                "201":
+                    $ref: '#/responses/CreateUpdateCommentResponse'
+                default:
+                    $ref: '#/responses/ErrorResponse'
+            schemes:
+                - http
+                - https
+    /posts:
+        get:
+            description: Returns a list of all posts
+            operationId: getPost
+            produces:
+                - application/json
+            responses:
+                "200":
+                    $ref: '#/responses/GetPostsResponse'
+                default:
+                    $ref: '#/responses/ErrorResponse'
+            schemes:
+                - http
+                - https
+    /posts/{id}:
+        delete:
+            description: Delete post by id
+            operationId: deletePost
+            produces:
+                - application/json
+            responses:
+                "204":
+                    $ref: '#/responses/DeletePostResponse'
+                default:
+                    $ref: '#/responses/ErrorResponse'
+            schemes:
+                - http
+                - https
+        get:
+            description: Returns the post by given id
+            operationId: getPost
+            produces:
+                - application/json
+            responses:
+                "200":
+                    $ref: '#/responses/GetPostResponse'
+                default:
+                    $ref: '#/responses/ErrorResponse'
+            schemes:
+                - http
+                - https
+        patch:
+            description: Update post by id with given fields
+            operationId: updatePost
+            produces:
+                - application/json
+            responses:
+                "201":
+                    $ref: '#/responses/CreateUpdatePostResponse'
+                default:
+                    $ref: '#/responses/ErrorResponse'
+            schemes:
+                - http
+                - https
+        post:
+            description: Creates the post with given info
+            operationId: createPost
+            produces:
+                - application/json
+            responses:
+                "201":
+                    $ref: '#/responses/CreateUpdatePostResponse'
                 default:
                     $ref: '#/responses/ErrorResponse'
             schemes:
@@ -275,6 +514,18 @@ paths:
 produces:
     - application/json
 responses:
+    CreateUpdateCommentResponse:
+        description: ""
+        schema:
+            type: string
+    CreateUpdatePostResponse:
+        description: ""
+        schema:
+            type: string
+    DeleteCommentResponse:
+        description: ""
+    DeletePostResponse:
+        description: ""
     DeleteUserResponse:
         description: ""
     ErrorResponse:
