# internal/models/swagger_models/post_response_model.go
@@ -1,0 +1,15 @@
+package swagger_models
+
+// swagger:response
+type CreateUpdatePostResponse string
+
+// swagger:response
+type DeletePostResponse struct {
+}
+
+// swagger:response
+type CreateUpdateCommentResponse string
+
+// swagger:response
+type DeleteCommentResponse struct {
+}
